@@ -149,7 +149,7 @@ abstract class WC_REST_Connect_Base_Controller extends WP_REST_Controller {
 	 * Validate the requester's permissions
 	 */
 	public function check_permission( $request ) {
-		return current_user_can( 'manage_woocommerce' );
+		return WC_Connect_Functions::user_can_manage_labels();
 	}
 
 }
