@@ -4,6 +4,9 @@
 * Fix   - Issue with printing blank label in Safari.
 * Fix   - DHL Express labels - require customs form when shipping to Puerto Rico.
 * Fix   - Update DHL Express pickup link.
+* Fix   - Ensure shipping label metabox is displayed to users with the correct capabilities.
+* Add   - Added `wcship_user_can_manage_labels` filter to check permissions to print shipping labels.
+* Add   - Added `wcship_manage_labels` capability to check permissions to print shipping labels.
 
 = 1.25.13 - 2021-05-20 =
 * Fix   - Prevent new sites from retrying failed connections.
